--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     </div>
                 </div>
                 <!--section for search city history-->
-                <button class=" btn btn-primary bg-secondary" type="button" id="clear-history">Clear history</button>
+                <button class=" btn btn-primary bg-secondary" type="button" id="clear-history">Clear history</button> 
                 <ul class="list-group mt-2">
                 </ul>
             </div> 
@@ -55,31 +55,31 @@
                         <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
                             <p id="date1"></p>
                             <p id="img1"></p>
-                            <p>Temperature:<span id="temp1"></span></p>
+                            <p>Temp:<span id="temp1"></span></p>
                             <p>Humidity:<span id="humidity1"></span></p>
                         </div>
                         <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
                             <p id="date2"></p>
                             <p id="img2"></p>
-                            <p>Temperature:<span id="temp2"></span></p>
+                            <p>Temp:<span id="temp2"></span></p>
                             <p>Humidity:<span id="humidity2"></span></p>
                         </div>
                         <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column">
                             <p id="date3"></p>
                             <p id="img3"></p>
-                            <p>Temperature:<span id="temp3"></span></p>
+                            <p>Temp:<span id="temp3"></span></p>
                             <p>Humidity:<span id="humidity3"></span></p>
                         </div>
                         <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column">
                             <p id="date4"></p>
                             <p id="img4"></p>
-                            <p>Temperature:<span id="temp4"></span></p>
+                            <p>Temp:<span id="temp4"></span></p>
                             <p>Humidity:<span id="humidity4"></span></p>
                         </div>
                         <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
                             <p id="date5"></p>
                             <p id="img5"></p>
-                            <p>Temperature:<span id="temp5"></span></p>
+                            <p>Temp:<span id="temp5"></span></p>
                             <p>Humidity:<span id="humidity5"></span></p>
                         </div>
                     </div>
