--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <p>Temperature:<span class="current" id="temperature"></span></p>
                         <p>Humidity:<span class="current" id="humidity"></span></p> 
                         <p>Wind Speed:<span class="current" id="wind-speed"></span></p>
-                        <p>UV index:<span class="current text-white" id="uv-index"></span></p> 
+                        <p>UV index:<span class="current " id="uvIndex"></span></p> 
                     </div>
                 </div>
                 <!--Row for future data -->
@@ -53,12 +53,18 @@
                     <h3>5-Day Forecast:</h3>
                     <div class="row text-light">
                         <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
+                            <p id="date0"></p>
+                            <p id="img0"></p>
+                            <p>Temp:<span id="temp0"></span></p>
+                            <p>Humidity:<span id="humidity0"></span></p>
+                        </div>
+                        <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
                             <p id="date1"></p>
                             <p id="img1"></p>
                             <p>Temp:<span id="temp1"></span></p>
                             <p>Humidity:<span id="humidity1"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
+                        <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column">
                             <p id="date2"></p>
                             <p id="img2"></p>
                             <p>Temp:<span id="temp2"></span></p>
@@ -70,17 +76,11 @@
                             <p>Temp:<span id="temp3"></span></p>
                             <p>Humidity:<span id="humidity3"></span></p>
                         </div>
-                        <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column">
+                        <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
                             <p id="date4"></p>
                             <p id="img4"></p>
                             <p>Temp:<span id="temp4"></span></p>
                             <p>Humidity:<span id="humidity4"></span></p>
-                        </div>
-                        <div class="col-sm-2 bg-info forecast text-white ml-2 mb-3 p-2 mt-2 rounded d-flex flex-column" >
-                            <p id="date5"></p>
-                            <p id="img5"></p>
-                            <p>Temp:<span id="temp5"></span></p>
-                            <p>Humidity:<span id="humidity5"></span></p>
                         </div>
                     </div>
                 </div>
